docs: Swagger endpoint is functional
